force-app/main/default/objects/XFILES__Xfilespro_Audit_Log__c/XFILES__Xfilespro_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Xfilespro Audit Log</label>
    <nameField>
        <displayFormat>XFPA-{0000}</displayFormat>
        <label>Log No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xfilespro Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>