force-app/main/default/objects/XFILES__Xfilespro_Audit_Log__c/fields/XFILES__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Event_Type__c</fullName>
    <label>Event Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>