force-app/main/default/objects/XFILES__Xfilespro_Audit_Log__c/fields/XFILES__File_Name__c.field-meta.xml
<CustomField>
    <fullName>XFILES__File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>