force-app/main/default/objects/XFILES__Xfilespro_Audit_Log__c/fields/XFILES__No_1__c.field-meta.xml
<CustomField>
    <fullName>XFILES__No_1__c</fullName>
    <label>No 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>