force-app/main/default/objects/XFILES__Xfilespro_Audit_Log__c/fields/XFILES__Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Provider_Type__c</fullName>
    <label>Provider Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>