force-app/main/default/objects/XFILES__Xfilespro_Audit_Log__c/fields/XFILES__Str_2__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Str_2__c</fullName>
    <label>Str 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>