force-app/main/default/objects/XFILES__Xfilespro_Audit_Log__c/fields/XFILES__Text_Area_1__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Text_Area_1__c</fullName>
    <label>Text Area 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>