force-app/main/default/objects/XFILES__Xfilespro_Audit_Log__c/fields/XFILES__Text_Area_2__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Text_Area_2__c</fullName>
    <label>Text Area 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>